--- a/index.html
+++ b/index.html
@@ -16,36 +16,26 @@
     overflow-x: hidden;
   }
 
-  /* HEADER BAR */
- 
-
-	header h1 {
-	  display: flex;
-	  align-items: center;
-	  gap: 0.8vw;
-	  margin: 0;
-	  font-size: 2.4vh;
-	  font-weight: 600;
-	  letter-spacing: 0.5px;
-	  text-align: left;
-	}
-
-	header h1 img {
-	  height: 3.5vh;
-	  width: auto;
-	}
+  header h1 {
+    display: flex;
+    align-items: center;
+    gap: 0.8vw;
+    margin: 0;
+    font-size: 2.4vh;
+    font-weight: 600;
+    letter-spacing: 0.5px;
+    text-align: left;
+  }
+  header h1 img {
+    height: 3.5vh;
+    width: auto;
+  }
   header {
     background: linear-gradient(90deg, #1976d2, #0d47a1);
     color: white;
     padding: 1.8vh 0;
     box-shadow: 0 2px 6px rgba(0,0,0,0.2);
-    //text-align: center;
-	padding-left: 2vw;
-  }
-
-  h2 {
-    margin-top: 2vh;
-    font-size: 2.5vh;
+    padding-left: 2vw;
   }
 
   .wheel-container {
@@ -144,6 +134,37 @@
     background: #155ab6;
   }
 
+  /* Center SPIN button */
+  .spin-center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: radial-gradient(circle at center, #ffca28, #f57c00);
+    color: #fff;
+    border: none;
+    border-radius: 50%;
+    width: 10vw;
+    height: 10vw;
+    font-size: 2.5vh;
+    font-weight: bold;
+    cursor: pointer;
+    box-shadow: 0 0 1vw rgba(0,0,0,0.4);
+    transition: all 0.25s ease;
+    z-index: 20;
+    animation: pulse 2s infinite;
+  }
+  .spin-center:hover {
+    transform: translate(-50%, -50%) scale(1.1);
+    box-shadow: 0 0 1.8vw rgba(0,0,0,0.6);
+  }
+
+  @keyframes pulse {
+    0% { box-shadow: 0 0 10px 2px rgba(245, 124, 0, 0.6); }
+    50% { box-shadow: 0 0 20px 5px rgba(255, 193, 7, 0.8); }
+    100% { box-shadow: 0 0 10px 2px rgba(245, 124, 0, 0.6); }
+  }
+
   .dialog {
     position: fixed;
     top: 0;
@@ -169,15 +190,6 @@
     width: 60vw;
     max-width: 320px;
   }
-  .dialog-content h2 {
-    color: #333;
-    margin-bottom: 2vh;
-    font-size: 2.5vh;
-  }
-  .dialog-content p {
-    font-size: 2vh;
-    margin: 1vh 0;
-  }
 
   @media (max-width: 768px) {
     .wheel-container { width: 85vw; }
@@ -193,13 +205,13 @@
       border-right: 3vw solid transparent;
       border-bottom: 4vw solid red;
     }
+    .spin-center { width: 22vw; height: 22vw; font-size: 2vh; }
   }
 </style>
 </head>
 <body>
 
 <header>
-  
   <h1><img src="roulette.png" alt="Wheel Icon">Wheel of Names</h1>
 </header>
 
@@ -208,16 +220,14 @@
   <p style="font-size:1.5vh;">Paste or type the names below (one per line):</p>
   <textarea id="barangayInput" placeholder="e.g. NAME 1&#10;NAME 2&#10;NAME 3"></textarea>
   <button id="loadBarangays">Update Wheel</button>
+  <button id="shuffleBtn" style="background:#43a047; display:none;">Shuffle</button>
   <button id="resetGame" style="background:#e53935; display:none;">Reset</button>
 </div>
 
 <div class="wheel-container">
   <canvas id="wheel"></canvas>
   <div class="arrow"></div>
-</div>
-
-<div id="spinContainer" style="display:none;">
-  <button id="spinBtn">SPIN</button>
+  <button id="spinBtn" class="spin-center">SPIN</button>
 </div>
 
 <div id="winnerPanel">
@@ -244,11 +254,11 @@ const riggedWinners = [
 const canvas = document.getElementById("wheel");
 const ctx = canvas.getContext("2d");
 const spinBtn = document.getElementById("spinBtn");
-const spinContainer = document.getElementById("spinContainer");
 const dialog = document.getElementById("dialog");
 const winnerNameDisplay = document.getElementById("winnerName");
 const closeDialog = document.getElementById("closeDialog");
 const loadBarangays = document.getElementById("loadBarangays");
+const shuffleBtn = document.getElementById("shuffleBtn");
 const resetGame = document.getElementById("resetGame");
 const barangayInput = document.getElementById("barangayInput");
 const winnerList = document.getElementById("winnerList");
@@ -299,11 +309,17 @@ loadBarangays.addEventListener("click", () => {
   if (confirm("Are you sure you want to update the wheel with this list?")) {
     names = inputText.split("\n").map(n => n.trim()).filter(n => n !== "");
     drawWheel();
-    spinContainer.style.display = "block";
+    shuffleBtn.style.display = "inline-block";
     loadBarangays.style.display = "none";
     resetGame.style.display = "inline-block";
     barangayInput.disabled = true;
   }
+});
+
+shuffleBtn.addEventListener("click", () => {
+  names = names.sort(() => Math.random() - 0.5);
+  drawWheel();
+  //alert("List shuffled!");
 });
 
 function spin() {
@@ -346,6 +362,27 @@ function spin() {
   requestAnimationFrame(animate);
 }
 
+function fireConfetti() {
+  const duration = 1000;
+  const end = Date.now() + duration;
+  (function frame() {
+    const colors = ['#ff0', '#0f0', '#0ff', '#f0f', '#f00'];
+    const particle = document.createElement("div");
+    particle.style.position = "fixed";
+    particle.style.width = "8px";
+    particle.style.height = "8px";
+    particle.style.background = colors[Math.floor(Math.random() * colors.length)];
+    particle.style.top = Math.random() * window.innerHeight + "px";
+    particle.style.left = Math.random() * window.innerWidth + "px";
+    particle.style.opacity = "0.8";
+    particle.style.borderRadius = "50%";
+    particle.style.zIndex = 9999;
+    document.body.appendChild(particle);
+    setTimeout(() => particle.remove(), 1000);
+    if (Date.now() < end) requestAnimationFrame(frame);
+  })();
+}
+
 function showWinner(name) {
   currentWinner = name;
   winnerNameDisplay.textContent = name;
@@ -353,6 +390,7 @@ function showWinner(name) {
   const li = document.createElement("li");
   li.textContent = name;
   winnerList.appendChild(li);
+  fireConfetti();
 }
 
 closeDialog.addEventListener("click", () => {
@@ -374,12 +412,12 @@ resetGame.addEventListener("click", () => {
     winnerList.innerHTML = "";
     barangayInput.disabled = false;
     loadBarangays.style.display = "inline-block";
+    shuffleBtn.style.display = "none";
     resetGame.style.display = "none";
-    spinContainer.style.display = "none";
     riggedWinners.splice(0, riggedWinners.length,
       "BATASAN HILLS", "PAYATAS", "COMMONWEALTH", "MARILAG", "MILAGROSA",
-	  "WEST KAMIAS", "U.P. VILLAGE", "KAMUNING", "GREATER LAGRO", "NOVALICHES PROPER",
-	  "GULOD", "NAGKAISANG NAYON"
+      "WEST KAMIAS", "U.P. VILLAGE", "KAMUNING", "GREATER LAGRO", "NOVALICHES PROPER",
+      "GULOD", "NAGKAISANG NAYON"
     );
     drawWheel(true);
   }
